--- a/scss/page/_index.scss
+++ b/scss/page/_index.scss
@@ -1,6 +1,6 @@
 .indexBanner{
     .banner{
-        background-image: url(../../img/mangoBanner.jpg);
+        background-image: url(../img/mangoBanner.jpg);
         height: 496px;
     }
     .bannerList{
@@ -40,10 +40,10 @@
 }
 .introduce{
     .introduceBanner1{
-        background-image: url(../../img/mangoList1.jpg);
+        background-image: url(../img/mangoList1.jpg);
     }
     .introduceBanner2{
-        background-image: url(../../img/mangoList2.jpg);
+        background-image: url(../img/mangoList2.jpg);
     }
     .introduceSpace{
         height: 460px;
