--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 nav{
     .logo{
-        background: url(../../img/mangoLogo.png);
+        background: url(../img/mangoLogo.png);
         width: 220px;
         height: 40px;
     }
